<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<!-- Scrim -->
	<View
		android:id="@+id/viewScrim"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:alpha="0"
		android:visibility="gone"
		/>

	<!-- note: use 'clickable' to prevent clicks from going through it down to the scrim -->
	<mohsen.muhammad.minimalist.core.ExtendedConstraintLayout
		android:id="@+id/settingsSheet"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:layout_marginBottom="@dimen/settingsHiddenMargin"
		android:clipToPadding="false"
		android:paddingBottom="@dimen/spacingMedium"
		app:fillColor="@color/mainBackground"
		tools:layout_marginBottom="0dp"
		>

		<!-- Top Border -->
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/multiSelectBorder"
			app:layout_constraintTop_toTopOf="parent"
			/>

		<!-- Theme -->
		<androidx.appcompat.widget.LinearLayoutCompat
			android:id="@+id/themeBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			>

			<mohsen.muhammad.minimalist.core.ExtendedLinearLayout
				android:id="@+id/buttonThemeLight"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/spacingLarge"
				android:layout_marginStart="@dimen/spacingLarge"
				android:layout_marginEnd="@dimen/spacingSmall"
				android:layout_weight="1"
				android:elevation="@dimen/elevationMedium"
				android:gravity="center"
				android:orientation="vertical"
				app:cornerRadius="@dimen/cornerRadiusLarge"
				app:fillColor="@color/mainBackground"
				app:strokeColor="@color/subSettingsBorder"
				app:strokeWidth="0dp"
				>

				<mohsen.muhammad.minimalist.core.ExtendedImageView
					android:layout_width="@dimen/imageButtonContainerSize2"
					android:layout_height="@dimen/imageButtonContainerSize2"
					android:contentDescription="@string/light"
					android:padding="@dimen/spacingSmallMedium"
					android:scaleType="fitCenter"
					android:src="@drawable/ic_sun"
					android:tint="@color/mainForeground"
					/>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/spacingMedium"
					android:text="@string/light"
					android:textColor="@color/mainForeground"
					android:textSize="@dimen/textLarge"
					/>

			</mohsen.muhammad.minimalist.core.ExtendedLinearLayout>

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginStart="@dimen/spacingSmall"
				android:layout_marginTop="@dimen/spacingXXXLarge"
				android:layout_marginEnd="@dimen/spacingSmall"
				android:layout_marginBottom="@dimen/spacingXXXLarge"
				android:background="@color/subSettingsBorder"
				/>

			<mohsen.muhammad.minimalist.core.ExtendedLinearLayout
				android:id="@+id/buttonThemeSystem"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacingSmall"
				android:layout_marginVertical="@dimen/spacingLarge"
				android:layout_weight="1"
				android:elevation="@dimen/elevationMedium"
				android:gravity="center"
				android:orientation="vertical"
				app:cornerRadius="@dimen/cornerRadiusLarge"
				app:fillColor="@color/mainBackground"
				app:strokeColor="@color/subSettingsBorder"
				app:strokeWidth="0dp"
				>

				<mohsen.muhammad.minimalist.core.ExtendedImageView
					android:layout_width="@dimen/imageButtonContainerSize2"
					android:layout_height="@dimen/imageButtonContainerSize2"
					android:contentDescription="@string/system"
					android:padding="@dimen/spacingSmallMedium"
					android:scaleType="fitCenter"
					android:src="@drawable/ic_sun_moon"
					android:tint="@color/mainForeground"
					/>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/spacingMedium"
					android:text="@string/system"
					android:textColor="@color/mainForeground"
					android:textSize="@dimen/textLarge"
					/>

			</mohsen.muhammad.minimalist.core.ExtendedLinearLayout>

			<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:layout_marginStart="@dimen/spacingSmall"
				android:layout_marginTop="@dimen/spacingXXXLarge"
				android:layout_marginEnd="@dimen/spacingSmall"
				android:layout_marginBottom="@dimen/spacingXXXLarge"
				android:background="@color/subSettingsBorder"
				/>

			<mohsen.muhammad.minimalist.core.ExtendedLinearLayout
				android:id="@+id/buttonThemeDark"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/spacingLarge"
				android:layout_marginStart="@dimen/spacingSmall"
				android:layout_marginEnd="@dimen/spacingLarge"
				android:layout_weight="1"
				android:elevation="@dimen/elevationMedium"
				android:gravity="center"
				android:orientation="vertical"
				app:cornerRadius="@dimen/cornerRadiusLarge"
				app:fillColor="@color/mainBackground"
				app:strokeColor="@color/subSettingsBorder"
				app:strokeWidth="0dp"
				>

				<mohsen.muhammad.minimalist.core.ExtendedImageView
					android:layout_width="@dimen/imageButtonContainerSize2"
					android:layout_height="@dimen/imageButtonContainerSize2"
					android:contentDescription="@string/dark"
					android:padding="@dimen/spacingSmallMedium"
					android:src="@drawable/ic_moon"
					android:tint="@color/mainForeground"
					/>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/spacingMedium"
					android:text="@string/dark"
					android:textColor="@color/mainForeground"
					android:textSize="@dimen/textLarge"
					/>

			</mohsen.muhammad.minimalist.core.ExtendedLinearLayout>

		</androidx.appcompat.widget.LinearLayoutCompat>

		<!-- Sleep Timer -->
		<mohsen.muhammad.minimalist.core.ExtendedConstraintLayout
			android:id="@+id/sleepTimerBar"
			android:layout_width="match_parent"
			android:layout_height="64dp"
			android:layout_marginStart="@dimen/spacingLarge"
			android:layout_marginEnd="@dimen/spacingLarge"
			android:animateLayoutChanges="true"
			android:clickable="false"
			android:elevation="@dimen/elevationMedium"
			app:cornerRadius="@dimen/cornerRadiusLarge"
			app:fillColor="@color/alwaysBlack"
			app:layout_constraintTop_toBottomOf="@id/themeBar"
			app:strokeColor="@color/mainSettingsBorder"
			app:strokeWidth="1dp"
			>

			<SeekBar
				android:id="@+id/sleepTimerProgress"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="57dp"
				android:max="180"
				android:maxHeight="900dp"
				android:padding="0dp"
				android:progressDrawable="@drawable/style_seek_bar_progress_settings_2"
				android:thumb="@null"
				android:clickable="false"
				tools:progress="130"
				/>

			<SeekBar
				android:id="@+id/sleepTimerDuration"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="57dp"
				android:max="180"
				android:maxHeight="900dp"
				android:padding="0dp"
				android:progressDrawable="@drawable/style_seek_bar_progress_settings_2"
				android:background="@null"
				android:thumb="@null"
				tools:progress="100"
				/>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/sleepTimerLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacingMediumLarge"
				android:layout_marginStart="@dimen/spacingLarge"
				android:text="@string/sleepTimer"
				android:textColor="@color/alwaysWhite"
				android:textSize="@dimen/textLarge"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				/>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/sleepTimerTextProgress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingEnd="@dimen/spacingSmallMedium"
				android:textColor="@color/alwaysWhite"
				android:textSize="@dimen/textMedium"
				android:textStyle="bold"
				android:visibility="gone"
				app:layout_constraintStart_toStartOf="@id/sleepTimerLabel"
				app:layout_constraintTop_toBottomOf="@id/sleepTimerLabel"
				tools:text="01:40"
				tools:visibility="visible"
				/>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/sleepTimerTextDuration"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/alwaysOffWhite"
				android:textSize="@dimen/textMedium"
				app:layout_constraintStart_toEndOf="@id/sleepTimerTextProgress"
				app:layout_constraintTop_toBottomOf="@id/sleepTimerLabel"
				tools:text="02:00"
				/>

			<View
				android:layout_width="1dp"
				android:layout_height="@dimen/spacingXLarge"
				android:background="@color/subSettingsBorder"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/sleepTimerToggle"
				app:layout_constraintTop_toTopOf="parent"
				/>

			<mohsen.muhammad.minimalist.core.ExtendedImageButton
				android:id="@+id/sleepTimerToggle"
				android:layout_width="@dimen/imageButtonContainerSize"
				android:layout_height="match_parent"
				android:layout_marginTop="1dp"
				android:layout_marginEnd="1dp"
				android:layout_marginBottom="1dp"
				android:contentDescription="@string/sleepTimerToggle"
				android:padding="@dimen/spacingExtraMediumLarge"
				android:src="@drawable/anim_stopwatch"
				android:tint="@color/mainForeground"
				app:cornerRadiusBottomLeft="0dp"
				app:cornerRadiusBottomRight="@dimen/cornerRadiusLarge"
				app:cornerRadiusTopLeft="0dp"
				app:cornerRadiusTopRight="@dimen/cornerRadiusLarge"
				app:fillColor="@color/alwaysBlack"
				app:layout_constraintEnd_toEndOf="parent"
				/>

		</mohsen.muhammad.minimalist.core.ExtendedConstraintLayout>

		<!-- Seek Jump -->
		<mohsen.muhammad.minimalist.core.ExtendedFrameLayout
			android:id="@+id/seekJumpBar"
			android:layout_width="match_parent"
			android:layout_height="64dp"
			android:layout_marginStart="@dimen/spacingLarge"
			android:layout_marginTop="@dimen/spacingLarge"
			android:layout_marginEnd="@dimen/spacingLarge"
			android:animateLayoutChanges="true"
			android:clickable="false"
			android:elevation="@dimen/elevationMedium"
			app:cornerRadius="@dimen/cornerRadiusLarge"
			app:fillColor="@color/alwaysBlack"
			app:layout_constraintTop_toBottomOf="@id/sleepTimerBar"
			>

			<SeekBar
				android:id="@+id/seekJump"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:max="300"
				android:maxHeight="900dp"
				android:padding="0dp"
				android:progressDrawable="@drawable/style_seek_bar_progress_settings"
				android:thumb="@null"
				tools:progress="100"
				/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center|start"
				android:layout_marginStart="@dimen/spacingLarge"
				android:orientation="vertical"
				>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/seekJump"
					android:textColor="@color/alwaysWhite"
					android:textSize="@dimen/textLarge"
					/>

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/seekJumpText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="@color/alwaysOffWhite"
					android:textSize="@dimen/textMedium"
					tools:text="100 Seconds"
					/>

			</LinearLayout>

			<mohsen.muhammad.minimalist.core.ExtendedImageView
				android:layout_width="@dimen/imageButtonContainerSize"
				android:layout_height="@dimen/imageButtonContainerSize2"
				android:layout_gravity="center|end"
				android:contentDescription="@string/dark"
				android:padding="@dimen/spacingMediumLarge"
				android:src="@drawable/ic_seek_jump"
				android:tint="@color/mainForeground"
				/>

		</mohsen.muhammad.minimalist.core.ExtendedFrameLayout>

		<!-- Shuffle / Repeat -->
		<androidx.appcompat.widget.LinearLayoutCompat
			android:id="@+id/shuffleRepeatBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:clipToPadding="false"
			android:padding="@dimen/spacingLarge"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/seekJumpBar"
			>

			<!--Shuffle-->
			<mohsen.muhammad.minimalist.core.ExtendedLinearLayout
				android:id="@+id/buttonShuffle"
				android:layout_width="0dp"
				android:layout_height="64dp"
				android:layout_marginEnd="@dimen/spacingMedium"
				android:layout_weight="1"
				android:elevation="@dimen/elevationMedium"
				android:paddingStart="@dimen/spacingLarge"
				android:paddingEnd="@dimen/spacingSmall"
				app:cornerRadius="@dimen/cornerRadiusLarge"
				app:fillColor="@color/alwaysBlack"
				app:strokeColor="@color/mainSettingsBorder"
				app:strokeWidth="1dp"
				>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center|start"
					android:layout_weight="1"
					android:text="@string/shuffle"
					android:textColor="@color/alwaysWhite"
					android:textSize="@dimen/textLarge"
					/>

				<mohsen.muhammad.minimalist.core.ExtendedImageView
					android:id="@+id/iconShuffle"
					style="@style/floatingButtonOmniStyle2"
					android:layout_marginTop="@dimen/spacingMedium"
					android:contentDescription="@string/shuffle"
					android:src="@drawable/shuffle031"
					android:tint="@color/alwaysWhite"
					app:cornerRadius="@dimen/cornerRadiusLarge"
					app:fillColor="@color/alwaysBlack"
					/>

			</mohsen.muhammad.minimalist.core.ExtendedLinearLayout>

			<!--Repeat-->
			<mohsen.muhammad.minimalist.core.ExtendedLinearLayout
				android:id="@+id/buttonRepeat"
				android:layout_width="0dp"
				android:layout_height="64dp"
				android:layout_marginStart="@dimen/spacingMedium"
				android:layout_weight="1"
				android:elevation="@dimen/elevationMedium"
				android:paddingStart="@dimen/spacingLarge"
				android:paddingEnd="@dimen/spacingSmall"
				app:cornerRadius="@dimen/cornerRadiusLarge"
				app:fillColor="@color/alwaysBlack"
				app:strokeColor="@color/mainSettingsBorder"
				app:strokeWidth="1dp"
				>

				<androidx.appcompat.widget.AppCompatTextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center|start"
					android:layout_weight="1"
					android:text="@string/repeat"
					android:textColor="@color/alwaysWhite"
					android:textSize="@dimen/textLarge"
					/>

				<mohsen.muhammad.minimalist.core.ExtendedImageView
					android:id="@+id/iconRepeat"
					style="@style/floatingButtonOmniStyle2"
					android:layout_marginTop="@dimen/spacingMedium"
					android:contentDescription="@string/repeat"
					android:elevation="0dp"
					android:src="@drawable/repeat040"
					android:tint="@color/alwaysWhite"
					app:cornerRadius="@dimen/cornerRadiusLarge"
					app:fillColor="@color/alwaysBlack"
					/>

			</mohsen.muhammad.minimalist.core.ExtendedLinearLayout>

		</androidx.appcompat.widget.LinearLayoutCompat>

		<!-- Privacy Policy -->
		<mohsen.muhammad.minimalist.core.ExtendedButton
			android:id="@+id/buttonPrivacyPolicy"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacingMedium"
			android:text="@string/privacyPolicy"
			android:textColor="@color/explorerForegroundLight"
			android:textSize="@dimen/textMedium"
			app:cornerRadius="@dimen/cornerRadiusLarge"
			app:layout_constraintEnd_toEndOf="@id/shuffleRepeatBar"
			app:layout_constraintStart_toStartOf="@id/shuffleRepeatBar"
			app:layout_constraintTop_toBottomOf="@id/shuffleRepeatBar"
			/>

	</mohsen.muhammad.minimalist.core.ExtendedConstraintLayout>

</FrameLayout>
