<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/controls_2"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:clipChildren="false"
	tools:layout_gravity="bottom"
	>

	<!--Main Panel-->
	<mohsen.muhammad.minimalist.core.ExtendedFrameLayout
		android:id="@+id/mainPanel"
		android:layout_width="match_parent"
		android:layout_height="@dimen/seekBarHeight"
		android:layout_marginStart="@dimen/spacingLarge"
		android:layout_marginEnd="@dimen/spacingLarge"
		android:layout_marginBottom="@dimen/seekBarMargin"
		android:elevation="@dimen/elevationMedium"
		android:animateLayoutChanges="true"
		app:fillColor="@color/alwaysBlack"
		app:cornerRadius="@dimen/cornerRadiusLarge"
		app:layout_constraintBottom_toBottomOf="parent"
		android:clickable="false"
		>

		<SeekBar
			android:id="@+id/seekBar"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:maxHeight="900dp"
			android:padding="0dp"
			android:max="100"
			android:progress="25"
			android:progressDrawable="@drawable/style_seek_bar_progress_2"
			android:thumb="@null"
			/>

		<mohsen.muhammad.minimalist.core.ExtendedImageView
			android:id="@+id/imageViewAlbumArt"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/album_art"
			android:scaleType="centerCrop"
			android:alpha="0.3"
			app:cornerRadius="@dimen/cornerRadiusLarge"
			/>

		<!-- Chapters -->
		<mohsen.muhammad.minimalist.core.ExtendedFrameLayout
			android:id="@+id/frameLayoutChapters"
			android:layout_width="match_parent"
			android:layout_height="@dimen/chapterIndicatorHeight"
			android:layout_marginBottom="74dp"
			android:layout_gravity="bottom"
			app:fillColor="@color/transparent"
			/>

		<!--track title-->
		<TextSwitcher
			android:id="@+id/textViewTitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="50dp"
			android:layout_marginStart="@dimen/spacingLarge"
			android:layout_marginEnd="@dimen/spacingLarge"
			android:layout_gravity="bottom"
			android:inAnimation="@android:anim/slide_in_left"
			android:outAnimation="@android:anim/slide_out_right"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="@color/alwaysWhite"
				android:textSize="@dimen/textLarge"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/minimalistMusicPlayer"
				tools:text="Song title"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="@color/alwaysWhite"
				android:textSize="@dimen/textLarge"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/minimalistMusicPlayer"
				tools:text="Song title"
				/>

		</TextSwitcher>

		<!--album/artist-->
		<TextSwitcher
			android:id="@+id/textViewSubtitle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="34dp"
			android:layout_marginStart="@dimen/spacingLarge"
			android:layout_marginEnd="@dimen/spacingLarge"
			android:layout_gravity="bottom"
			android:inAnimation="@android:anim/fade_in"
			android:outAnimation="@android:anim/fade_out"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="@color/alwaysOffWhite"
				android:textSize="@dimen/textSmall"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/welcomeMessage"
				tools:text="Song Album (Song Artist)"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textColor="@color/alwaysOffWhite"
				android:textSize="@dimen/textSmall"
				android:maxLines="1"
				android:ellipsize="end"
				android:text="@string/welcomeMessage"
				tools:text="Song Album (Song Artist)"
				/>

		</TextSwitcher>

	</mohsen.muhammad.minimalist.core.ExtendedFrameLayout>

	<mohsen.muhammad.minimalist.core.ExtendedLinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="-24dp"
		android:elevation="@dimen/elevationLarge"
		app:layout_constraintStart_toStartOf="@id/mainPanel"
		app:layout_constraintEnd_toEndOf="@id/mainPanel"
		app:layout_constraintBottom_toBottomOf="@id/mainPanel"
		app:cornerRadius="@dimen/cornerRadiusLarge"
		app:fillColor="@color/alwaysWhite"
		>

		<!--Previous-->
		<mohsen.muhammad.minimalist.core.ExtendedImageButton
			android:id="@+id/buttonPrev"
			style="@style/floatingButtonOmniStyle2"
			android:tint="@color/alwaysOffBlack"
			app:fillColor="@color/alwaysWhite"
			android:src="@drawable/next000"
			android:rotation="180"
			app:cornerRadiusBottomRight="@dimen/cornerRadiusLarge"
			app:cornerRadiusTopRight="@dimen/cornerRadiusLarge"
			/>

		<!--Omni button-->
		<mohsen.muhammad.minimalist.core.ExtendedImageButton
			android:id="@+id/buttonOmni"
			style="@style/floatingButtonOmniStyle2"
			android:tint="@color/alwaysOffBlack"
			app:fillColor="@color/alwaysWhite"
			android:src="@drawable/anim_play_pause"
			/>

		<!--Next-->
		<mohsen.muhammad.minimalist.core.ExtendedImageButton
			android:id="@+id/buttonNext"
			style="@style/floatingButtonOmniStyle2"
			android:tint="@color/alwaysOffBlack"
			app:fillColor="@color/alwaysWhite"
			android:src="@drawable/next000"
			app:cornerRadiusTopRight="@dimen/cornerRadiusLarge"
			app:cornerRadiusBottomRight="@dimen/cornerRadiusLarge"
			/>


	</mohsen.muhammad.minimalist.core.ExtendedLinearLayout>

	<!--Seek Text-->
	<TextView
		android:id="@+id/textViewSeek"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/spacingMedium"
		android:layout_marginStart="@dimen/spacingLarge"
		android:elevation="@dimen/elevationLarge"
		android:textSize="@dimen/textMedium"
		android:textColor="@color/alwaysWhite"
		android:textStyle="bold"
		android:text="@string/blankTimestamp"
		app:layout_constraintStart_toStartOf="@id/mainPanel"
		app:layout_constraintBottom_toBottomOf="@id/mainPanel"
		tools:text="02:35"
		/>

	<!--Seek Text-->
	<TextView
		android:id="@+id/textViewDuration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/spacingMedium"
		android:layout_marginEnd="@dimen/spacingLarge"
		android:elevation="@dimen/elevationLarge"
		android:textSize="@dimen/textMedium"
		android:textColor="@color/alwaysOffWhite"
		android:text="@string/blankTimestamp"
		app:layout_constraintEnd_toEndOf="@id/mainPanel"
		app:layout_constraintBottom_toBottomOf="@id/mainPanel"
		tools:text="4:08"
		/>

	<!--Repeat-->
	<mohsen.muhammad.minimalist.core.ExtendedImageButton
		android:id="@+id/buttonRepeat"
		android:src="@drawable/repeat040"
		style="@style/floatingButtonOmniStyle2"
		android:layout_marginTop="@dimen/spacingMedium"
		android:elevation="0dp"
		android:tint="@color/mainForeground"
		app:layout_constraintStart_toStartOf="@id/mainPanel"
		app:layout_constraintTop_toBottomOf="@id/mainPanel"
		app:fillColor="@color/mainBackground"
		app:cornerRadius="@dimen/cornerRadiusLarge"
		/>

	<!--Shuffle-->
	<mohsen.muhammad.minimalist.core.ExtendedImageButton
		android:id="@+id/buttonShuffle"
		android:src="@drawable/shuffle031"
		style="@style/floatingButtonOmniStyle2"
		android:layout_marginTop="@dimen/spacingMedium"
		android:tint="@color/mainForeground"
		app:layout_constraintEnd_toEndOf="@id/mainPanel"
		app:layout_constraintTop_toBottomOf="@id/mainPanel"
		app:fillColor="@color/mainBackground"
		app:cornerRadius="@dimen/cornerRadiusLarge"
		/>

	<!--Expand/Collapse-->
	<mohsen.muhammad.minimalist.core.ExtendedImageButton
		android:id="@+id/buttonAlbumArt"
		android:src="@drawable/expand_collapse000"
		style="@style/floatingButtonOmniStyle2"
		android:layout_marginEnd="@dimen/spacingMediumLarge"
		android:visibility="gone"
		android:tint="@color/mainForeground"
		app:layout_constraintEnd_toStartOf="@id/buttonShuffle"
		app:layout_constraintBottom_toBottomOf="@id/buttonShuffle"
		app:fillColor="@color/mainBackground"
		app:cornerRadius="@dimen/cornerRadiusLarge"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>
